# cc-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: BRIEF.md
src/claude_search/: auth.py  cli.py  index.py  ingest.py  parser.py  paths.py  server.py  watcher.py
src/claude_search/service/: __init__.py  _schtasks.py  _systemd.py
src/claude_search/web/: api.js  app.jsx  data.jsx  drawer.jsx  icons.jsx  index.html  remote-panel.jsx  remotes-store.js  service-panel.jsx  settings-shell.jsx  settings.css  settings.html  styles.css
tests/: test_auth.py  test_index.py  test_parser.py  test_server.py  test_service_render.py  test_watcher.py
tests/fixtures/: malformed.jsonl  normal.jsonl  unicode.jsonl
