[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-search"
version = "0.2.0"
description = "Local full-text search over Claude Code session history"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "platformdirs>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
claude-search = "claude_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claude_search" = ["web/*", "web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
